<resources>
    <string name="app_name">Songshare</string>
    <string name="login_button">Login</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="copyright">Songshare Beta V1.0, Squid Ink.</string>
    <string name="streamview_stream_toggle">Streams</string>
    <string name="streamview_friends_toggle">Friends</string>
    <string name="streamview_profile_toggle">Profile</string>
    <string name="streamview_invites_toggle">Requests</string>
    <string name="sign_up_text">I agree to    </string>
    <string name="sign_up_now_text">Dont have an account? Sign Up</string>
    <string name="back_to_login">Back</string>
    <string name="username_placeholder">[Username]</string>
    <string name="track_share_count_placeholder">Tracks Shared\n <b>0</b></string>
    <string name="friends_count_placeholder">Friends\n <b>0</b></string>
    <string name="need_an_account">Need an Account?</string>
    <string name="sign_up_now">Sign Up</string>
    <string name="track_fragment_track">Track Name</string>
    <string name="track_fragment_artist">Artist</string>
    <string name="track_fragment_album">Album</string>
    <string name="title_activity_tab_screen">TabScreen</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="eula_text">End-User License Agreement (EULA) of Songshare
\n\n        
This End-User License Agreement ("EULA") is a legal agreement between you and Songshare
\n\n
This EULA agreement governs your acquisition and use of our Songshare software ("Software") directly from Songshare or indirectly through a Songshare authorized reseller or distributor (a "Reseller").
\n\n
Please read this EULA agreement carefully before completing the installation process and using the Songshare software. It provides a license to use the Songshare software and contains warranty information and liability disclaimers.
\n\n
If you register for a free trial of the Songshare software, this EULA agreement will also govern that trial. By clicking "accept" or installing and/or using the Songshare software, you are confirming your acceptance of the Software and agreeing to become bound by the terms of this EULA agreement.
\n\n
If you are entering into this EULA agreement on behalf of a company or other legal entity, you represent that you have the authority to bind such entity and its affiliates to these terms and conditions. If you do not have such authority or if you do not agree with the terms and conditions of this EULA agreement, do not install or use the Software, and you must not accept this EULA agreement.
\n\n
This EULA agreement shall apply only to the Software supplied by Songshare herewith regardless of whether other software is referred to or described herein. The terms also apply to any Songshare updates, supplements, Internet-based services, and support services for the Software, unless other terms accompany those items on delivery. If so, those terms apply.
\n\n
License Grant
Songshare hereby grants you a personal, non-transferable, non-exclusive licence to use the Songshare software on your devices in accordance with the terms of this EULA agreement.
\n\n
You are permitted to load the Songshare software (for example a PC, laptop, mobile or tablet) under your control. You are responsible for ensuring your device meets the minimum requirements of the Songshare software.
\n\n
You are not permitted to:
\n\n
Edit, alter, modify, adapt, translate or otherwise change the whole or any part of the Software nor permit the whole or any part of the Software to be combined with or become incorporated in any other software, nor decompile, disassemble or reverse engineer the Software or attempt to do any such things
Reproduce, copy, distribute, resell or otherwise use the Software for any commercial purpose
Allow any third party to use the Software on behalf of or for the benefit of any third party
Use the Software in any way which breaches any applicable local, national or international law
use the Software for any purpose that Songshare considers is a breach of this EULA agreement
Intellectual Property and Ownership
Songshare shall at all times retain ownership of the Software as originally downloaded by you and all subsequent downloads of the Software by you. The Software (and the copyright, and other intellectual property rights of whatever nature in the Software, including any modifications made thereto) are and shall remain the property of Songshare.
\n\n
Songshare reserves the right to grant licences to use the Software to third parties.
\n\n
Termination
This EULA agreement is effective from the date you first use the Software and shall continue until terminated. You may terminate it at any time upon written notice to Songshare.
\n\n
This EULA was created by eulatemplate.com for Songshare
\n\n
It will also terminate immediately if you fail to comply with any term of this EULA agreement. Upon such termination, the licenses granted by this EULA agreement will immediately terminate and you agree to stop all access and use of the Software. The provisions that by their nature continue and survive will survive any termination of this EULA agreement.
\n\n
Governing Law
This EULA agreement, and any dispute arising out of or in connection with this EULA agreement, shall be governed by and construed in accordance with the laws of My Country.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
