<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/ic_launcher_background" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="40dp">

            <TextView
                android:id="@+id/UsernameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:paddingBottom="20dp"
                android:text="@string/username_placeholder"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/CountsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TracksSharedText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cabin"
                    android:text="@string/track_share_count_placeholder"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/FriendNumberText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cabin"
                    android:text="@string/friends_count_placeholder"
                    android:textAlignment="center" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>